--- a/blog/my_syte/templates/my_syte/home_page.html
+++ b/blog/my_syte/templates/my_syte/home_page.html
@@ -1,5 +1,54 @@
 {% extends 'base.html' %}
+
+{% load static %}
+{% block style%}
+<link rel="stylesheet" href="{% static "my_syte/index.css" %}"/>
+
+{% endblock %}
 {% block title %}My syte{% endblock %}
+
 {% block content%}
-Your welcone
+
+<header id = "main-navigation">
+    <h1>
+        <a href="{% url "home-page"%}">My Blog</a>
+        <h1>
+    <nav>
+        <a href="{% url "posts" %}">All posts</a>
+    </nav>
+</header>
+
+<section id="welcome">
+    
+    <header>
+        <img src="{% static "my_syte/image/blog.jpg" %}" alt="My picture!"/>
+        <h2>My Blog</h2>
+    </header>
+    <p>Hi, I love to blog about tech and world!</p>
+
+</section>
+
+<section id="latest-posts">
+    <h2>My Latest Thoughts</h2>
+        
+    <ul>
+        <li>
+            <article class="post" >
+                <a href="">
+                <img src="{% static "my_syte/image/mount.jpg" %}" alt="Mountain hiking"/>
+                <div class ="post__content">
+                <h3>Mountain Hiking<h3>
+                    <p>
+                        Hiking is a long distance walk along a specific trail, most commonly across country. Some hikes can be challenging and last for days including camping, but others can be a long day walk at a steady pace. However, mountain climbing is a challenging sport in which people climb steep rocky slopes to reach the top</p>
+                    </div>
+                </a>
+            </article>
+        </li>
+    </ul>
+</section>
+
+<section id="about">
+    <h2>What i do</h2>
+    <p>I learning programming.</p>
+</section>
 {% endblock %}
