--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-{% load static%}
+{% load static %}
 <head>
-    {% block style %}{% endblock %}
+    <link rel="stylesheet" href="{% static "app.css" %}"/>
+    {% block style %}
+    {% endblock %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
+    
     {% block content %}
     {% endblock %}
 </body>
