--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -10,6 +10,16 @@
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
+
+    <header id = "main-navigation">
+        <h1>
+            <a href="{% url "home-page"%}">My Blog</a>
+            <h1>
+        <nav>
+            <a href="{% url "posts" %}">All posts</a>
+        </nav>
+    </header>
+    
     
     {% block content %}
     {% endblock %}
