--- a/blog/my_syte/templates/my_syte/include/post.html
+++ b/blog/my_syte/templates/my_syte/include/post.html
@@ -1,8 +1,8 @@
 {% load static  %}
 <li>
     <article class="post" >
-        <a href="{% url "post-ditails" post.post_name %}">
-        <img src="{% static "my_syte/image/"|add:post.image %}" alt="{{post.title}}"/>
+        <a href="{% url "post-ditails" post.slug %}">
+        <img src="{{post.image}}" alt="{{post.title}}"/>
         <div class ="post__content">
         <h3>{{post.title}}<h3>
             <p>
