--- a/blog/my_syte/templates/my_syte/include/post.html
+++ b/blog/my_syte/templates/my_syte/include/post.html
@@ -2,7 +2,7 @@
 <li>
     <article class="post" >
         <a href="{% url "post-ditails" post.slug %}">
-        <img src="{{post.image}}" alt="{{post.title}}"/>
+        <img src="{{post.image.url}}" alt="{{post.title}}"/>
         <div class ="post__content">
         <h3>{{post.title}}<h3>
             <p>
