--- a/blog/my_syte/templates/my_syte/post_detail.html
+++ b/blog/my_syte/templates/my_syte/post_detail.html
@@ -6,10 +6,18 @@
 {% block title%}{{post.title|upper}}{%endblock%}
 {% block content%}
 <section id="summary">
+
     <h2>{{post.title}}</h2>
+
+    <div>
+        {% for tag in post.tag.all%}
+            <span class="tag" >{{tag}}</span>
+        {% endfor %}
+    </div>
+    
     <article>
-        <img src= "{{post.image}}" alt="{{post.title}}">
-        <address>{{post.author}}</address>
+        <img src= "{{post.image.url}}" alt="{{post.title}}">
+        <a href="{{post.author.get_absolute_url}}">{{post.author}}</a>
         <div>Last updated on <time>{{post.date}}</time></div>
     </article>
 </section>
