--- a/blog/my_syte/templates/my_syte/include/post.html
+++ b/blog/my_syte/templates/my_syte/include/post.html
@@ -1,7 +1,7 @@
 {% load static  %}
 <li>
     <article class="post" >
-        <a href="{% url "post-ditails" post.slug %}">
+        <a href="{% url "post-details" post.slug %}">
         <img src="{{post.image.url}}" alt="{{post.title}}"/>
         <div class ="post__content">
         <h3>{{post.title}}<h3>
