--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -14,10 +14,12 @@
     <header id = "main-navigation">
         <h1>
             <a href="{% url "home-page"%}">My Blog</a>
-            <h1>
+        <h1>
         <nav>
             <a href="{% url "posts" %}">All posts</a>
         </nav>
+
+        <a href = {% url 'read-later'%}>My read later posts</a>
     </header>
     
     
